fai (3.2.12) unstable; urgency=low

  * make-fai-nfsroot: print version of debootstrap (closes: #500046)

 -- Thomas Lange <lange@debian.org>  Tue, 14 Oct 2008 15:04:22 +0200

fai (3.2.11) unstable; urgency=low

  * control: depend on syslinux-common instead of syslinux (closes: #494417)
    use same intro for description for all packages,
    add dependeny and recommends on openbsd-inetd | inet-superserver as
    workaround for #404760
  * fai-chboot.8, fai-cd.8, ainsl.1, fai.8, fai-class.8: apply patches
    from Colin Tuckley
  * THANKS: add Colin
  * fai-chboot.8: add example for using templates, add link to pxelinux
    documentation
  * fai-cd.8: remove unused info
  * fai-mirror.1: add information about files used by this script
  * faimond.8: minor fixes
  * install_packages.8: minor fixes
  * make-fai-nfsroot.8: minor fixes
  * fai-debconf.1: minor fixes
  * setup-storage.8: replace mdoc macro version with man macro version,
    reformat examples using tab stops, make groff happy
  * fai-guide.sgml: remove info about make-fai-bootfloppy, add info about
    kernel parameters
  * faisetup.sgml: update messages
  * bootexample.sgml: update example messages
  * mkdebmirror: remove obsolete code for fetching boot floppy images

 -- Thomas Lange <lange@debian.org>  Wed, 01 Oct 2008 14:20:45 +0200

fai (3.2.10) unstable; urgency=low

  * add texlive-latex-recommended and texlive-fonts-recommended to
    build-depends-indep which fixes FTBFS (closes: #497683),
    add cfengine2 as recommends to fai-client (closes: #442843),
    remove mknbi from fai-docs recommends
  * Init.pm: really add important bugfix (494784) that was only fixed in svn 
    but not in 3.2.9 upload (closes: #494784), fix typo in variable name
  * Volume.pm: ignore output line of parted containing "Model:"
    (closes: #497066) 
  * disk-info: fix bashism (closes: #498023),
    add pattern for KVM devices like /dev/vd[abcd]X (closes: #494426)