@@ -217,10 +217,11 @@ sub init_part_config {
       ($extended < 5)
         or die "Too many primary partitions while creating extended\n";
 
-      # initialize the entry
-      (\%FAI::configs)->{$FAI::device}->{partitions}->{$extended} = {
-        size => {}
-      };
+      # initialize the entry, unless it already exists
+      defined ($FAI::configs{$FAI::device}{partitions}{$extended})
+        or (\%FAI::configs)->{$FAI::device}->{partitions}->{$extended} = {
+          size => {}
+        };
 
       my $part_size =
         (\%FAI::configs)->{$FAI::device}->{partitions}->{$extended}->{size};
